force-app/main/default/objects/Quote__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>BLANKVALUE(Lead__r.Agency__r.Id__c, Contact__r.Agency__r.Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>