force-app/main/default/objects/Quote__c/fields/Annual_Term__c.field-meta.xml
<CustomField>
    <fullName>Annual_Term__c</fullName>
    <label>Annual Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>