force-app/main/default/objects/Quote__c/fields/Any_Boat_Operator_Under_22__c.field-meta.xml
<CustomField>
    <fullName>Any_Boat_Operator_Under_22__c</fullName>
    <label>Any Boat Operator Under 22?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>