force-app/main/default/objects/Quote__c/fields/Broker_Policy_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Policy_Fee__c</fullName>
    <label>Broker/Policy Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>