force-app/main/default/objects/Quote__c/fields/Calculated_On_Term__c.field-meta.xml
<CustomField>
    <fullName>Calculated_On_Term__c</fullName>
    <label>Calculated On Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>