force-app/main/default/objects/Quote__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>LiabilityTheft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>