force-app/main/default/objects/Quote__c/fields/Driver_Age__c.field-meta.xml
<CustomField>
    <fullName>Driver_Age__c</fullName>
    <label>Driver Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>