force-app/main/default/objects/Quote__c/fields/End_Date_for_Coverage__c.field-meta.xml
<CustomField>
    <fullName>End_Date_for_Coverage__c</fullName>
    <label>End Date for Coverage</label>
    <type>Date</type>
</CustomField>