force-app/main/default/objects/Quote__c/fields/Gold__c.field-meta.xml
<CustomField>
    <fullName>Gold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gold</label>
    <type>Checkbox</type>
</CustomField>