force-app/main/default/objects/Quote__c/fields/Is_the_Maximum_Speed_more_than_50_mph__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Maximum_Speed_more_than_50_mph__c</fullName>
    <label>Is the Maximum Speed more than 50 mph?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>