force-app/main/default/objects/Quote__c/fields/Is_the_owner_living_in_Mexico__c.field-meta.xml
<CustomField>
    <fullName>Is_the_owner_living_in_Mexico__c</fullName>
    <label>Is the owner living in Mexico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>