force-app/main/default/objects/Quote__c/fields/Is_there_a_driver_over_75__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_driver_over_75__c</fullName>
    <label>Is there a driver over 75</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>