force-app/main/default/objects/Quote__c/fields/Is_this_a_Rental_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Rental_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a Rental Vehicle?</label>
    <type>Checkbox</type>
</CustomField>