force-app/main/default/objects/Quote__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liability</valueSetName>
    </valueSet>
</CustomField>