force-app/main/default/objects/Quote__c/fields/Liability_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Liability_Coverage__c</fullName>
    <label>Liability Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>