force-app/main/default/objects/Quote__c/fields/Liability_Payment__c.field-meta.xml
<CustomField>
    <fullName>Liability_Payment__c</fullName>
    <label>Liability Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>