force-app/main/default/objects/Quote__c/fields/Medical_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Medical_Coverage__c</fullName>
    <label>Medical Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>