force-app/main/default/objects/Quote__c/fields/Medical_Payment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Payment__c</fullName>
    <label>Medical Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>