force-app/main/default/objects/Quote__c/fields/Old_Net_Premium__c.field-meta.xml
<CustomField>
    <fullName>Old_Net_Premium__c</fullName>
    <label>Old Net Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>