force-app/main/default/objects/Quote__c/fields/Physical_Damage__c.field-meta.xml
<CustomField>
    <fullName>Physical_Damage__c</fullName>
    <label>Physical Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>