force-app/main/default/objects/Quote__c/fields/Platinum__c.field-meta.xml
<CustomField>
    <fullName>Platinum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platinum</label>
    <type>Checkbox</type>
</CustomField>