force-app/main/default/objects/Quote__c/fields/Platinum_Endorsment__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Endorsment__c</fullName>
    <label>Platinum Endorsement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>