force-app/main/default/objects/Quote__c/fields/Policy_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type_picklist__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Policy_Type</valueSetName>
    </valueSet>
</CustomField>