force-app/main/default/objects/Quote__c/fields/Property_Damage_Liability__c.field-meta.xml
<CustomField>
    <fullName>Property_Damage_Liability__c</fullName>
    <label>Property Damage Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Damage_Liability</valueSetName>
    </valueSet>
</CustomField>