force-app/main/default/objects/Quote__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Policy Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>