force-app/main/default/objects/Quote__c/fields/Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Quote_Value__c</fullName>
    <label>Quote Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>