force-app/main/default/objects/Quote__c/fields/QuotePdfJson__c.field-meta.xml
<CustomField>
    <fullName>QuotePdfJson__c</fullName>
    <label>QuotePdfJson</label>
    <length>37000</length>
    <type>LongTextArea</type>
</CustomField>