force-app/main/default/objects/Quote__c/fields/Renew_Quote__c.field-meta.xml
<CustomField>
    <fullName>Renew_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renew Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>