force-app/main/default/objects/Quote__c/fields/Salvage_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Salvage_Vehicle__c</fullName>
    <label>Salvage Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>