force-app/main/default/objects/Quote__c/fields/Start_Date_for_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_for_Coverage__c</fullName>
    <label>Start Date for Coverage</label>
    <type>Date</type>
</CustomField>