force-app/main/default/objects/Quote__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
            </value>
            <value>
                <fullName>Semi-Annual(Half a Year)</fullName>
            </value>
            <value>
                <fullName>Annual(One Year)</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>