force-app/main/default/objects/Quote__c/fields/Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Days__c</fullName>
    <label>Term Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>