force-app/main/default/objects/Quote__c/fields/Territory_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Territory_Coverage__c</fullName>
    <label>Territory Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>