force-app/main/default/objects/Quote__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Policy_Type_picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Chihuahua</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Guatemala</fullName>
            </value>
            <value>
                <fullName>America/Hermosillo</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Mazatlan</fullName>
            </value>
            <value>
                <fullName>America/Merida</fullName>
            </value>
            <value>
                <fullName>America/Mexico_City</fullName>
            </value>
            <value>
                <fullName>America/Monterrey</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Tijuana</fullName>
            </value>
            <value>
                <fullName>America/Vancouver</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>Africa/Algiers</fullName>
                <isActive>false</isActive>
                <label>Africa/Algiers</label>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
                <isActive>false</isActive>
                <label>Africa/Cairo</label>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
                <isActive>false</isActive>
                <label>Africa/Johannesburg</label>
            </value>
            <value>
                <fullName>Africa/Nairobi</fullName>
                <isActive>false</isActive>
                <label>Africa/Nairobi</label>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
                <isActive>false</isActive>
                <label>America/Anchorage</label>
            </value>
            <value>
                <fullName>America/Argentina/Buenos_Aires</fullName>
                <isActive>false</isActive>
                <label>America/Argentina/Buenos_Aires</label>
            </value>
            <value>
                <fullName>America/Bogota</fullName>
                <isActive>false</isActive>
                <label>America/Bogota</label>
            </value>
            <value>
                <fullName>America/Caracas</fullName>
                <isActive>false</isActive>
                <label>America/Caracas</label>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
                <isActive>false</isActive>
                <label>America/El_Salvador</label>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
                <isActive>false</isActive>
                <label>America/Halifax</label>
            </value>
            <value>
                <fullName>America/Indiana/Indianapolis</fullName>
                <isActive>false</isActive>
                <label>America/Indiana/Indianapolis</label>
            </value>
            <value>
                <fullName>America/Lima</fullName>
                <isActive>false</isActive>
                <label>America/Lima</label>
            </value>
            <value>
                <fullName>America/Panama</fullName>
                <isActive>false</isActive>
                <label>America/Panama</label>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
                <isActive>false</isActive>
                <label>America/Puerto_Rico</label>
            </value>
            <value>
                <fullName>America/Santiago</fullName>
                <isActive>false</isActive>
                <label>America/Santiago</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>