force-app/main/default/objects/Quote__c/fields/Total_Theft_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Theft_Payment__c</fullName>
    <label>Total Theft Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>