force-app/main/default/objects/Quote__c/fields/Trailering__c.field-meta.xml
<CustomField>
    <fullName>Trailering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailering</label>
    <type>Checkbox</type>
</CustomField>