force-app/main/default/objects/Quote__c/fields/Type_of_Vessel__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vessel__c</fullName>
    <label>Type of Vessel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vessel_Type</valueSetName>
    </valueSet>
</CustomField>