force-app/main/default/objects/Quote__c/fields/Vehicle_Age__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Age__c</fullName>
    <label>Vehicle Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>