force-app/main/default/objects/Quote__c/fields/Vehicle_Deductible_Comprehensive__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Deductible_Comprehensive__c</fullName>
    <label>Vehicle_Deductible_Comprehensive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>