force-app/main/default/objects/Quote__c/fields/Vehicle_Make_WS__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make_WS__c</fullName>
    <label>Vehicle Make</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_Year_WS__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alfa Romeo</fullName>
            </value>
            <value>
                <fullName>AM General</fullName>
            </value>
            <value>
                <fullName>American Motors Corporation</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Bertone</fullName>
            </value>
            <value>
                <fullName>Bill Dovell Motor Car Company</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>E.P. Dutton, Inc.</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Grumman Olson</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Jaguar</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Lotus</fullName>
            </value>
            <value>
                <fullName>Maserati</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Merkur</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>