force-app/main/default/objects/Quote__c/fields/Vehicle_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sub_type__c</fullName>
    <label>Vehicle Sub type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Type</valueSetName>
    </valueSet>
</CustomField>