force-app/main/default/objects/Quote__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Policy_Type_picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Automobile-Van-Minivan</fullName>
            </value>
            <value>
                <fullName>SUV-Crossover</fullName>
            </value>
            <value>
                <fullName>ATV-UTV-Quads-Buggie</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Watercraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>