force-app/main/default/objects/Quote__c/fields/Vehicle_used_for_Business_Purposes__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_used_for_Business_Purposes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle used for Business Purposes?</label>
    <type>Checkbox</type>
</CustomField>