force-app/main/default/objects/Quote__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>