force-app/main/default/objects/Quote__c/fields/Vessel_Length__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Length__c</fullName>
    <label>Vessel Length</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Vessel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vessel_Length</valueSetName>
    </valueSet>
</CustomField>